# k-forghani.github.io

./: pelicanconf.py  pyproject.toml
docs/: archives.html  authors.html  tags.html
output/: categories.html  index.html
